	Chg: Make nzb-export comments reflect a more specific date format
	Fix: nzb-import using filenames as searchname now strips .gz as well as .nzb
	Mrg: PR - Feature apixmlwrite #2155
	Fix: Caps category issue caused by final class moves
	Fix: Caps Multi to single call not sending data in the correct format
	Fix: Caps subcategory listing sending subcatlist as element should be just subcat
2016-06-01 DariusIII
	Upd: Composer.lock to match composer.json.
2016-05-31 ruhllatio
	Fix: Bug with TV API changes that causes unmatched Show/Sxx/Exx queries to return data
2016-05-31 DariusIII
	Fix: Remove doubled and wrong preinfo function ih Gamma theme utils.js
	Fix: PreDB page layout in Gamma theme.
	Fix: Links to colorbox images in Gamma theme.
2016-05-30 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x.
2015-05-29 DariusIII
	* Upd: Replace icons with font-awesome counterparts in Alpha theme.
2016-05-28 ruhllatio
	Fix: Greatly improve TV API search query when specifying ID/Season/Ep etc. Remove var_dump.
	Fix: Wrong array offset
2016-05-27 DariusIII
	* Upd: Use well-sm in all the themes.
	* Fix: Replace boostrap.min.css with Gamma theme custom bootstrap.css
	* Fix: Fix link to autosize.min.js in Alpha theme.
	* Fix: Fix tables layout in Gamma theme by removing table-striped attribute.
2016-05-26 niel
	Fix: Update some bower-asset's version strings to better reflect the version specified.
		Tightened versions for others to err on the side of caution. We can relax later if this
		prooves to be too tight.
2016-05-24 ruhllatio
	Fix: Revert concat cat query to INNER and add WHERE constraint to exclude parentid being NULL
	Chg: Convert browse to use queryCalc method for cached counts to improve performance
	Fix: preid still in use in browse templates causing Pre'd tags to not show up in site view
	Fix: Make queryCalc strip out OFFSET/LIMIT tags from query before caching the SQL_CALC_FOUNDS_ROWS results
2016-05-24 niel
	Fix: Typoes in Changelog.